// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicKey.from Reports error on invalid public key 1`] = `
"snippetCode.ts (3,20): Argument to PublicKey.from must be a string literal publicKey.

      1 | 
      2 |       import { PublicKey } from '@neo-one/smart-contract';
    > 3 |       const keys = PublicKey.from('abc');
        |                    ^
      4 |     
"
`;

exports[`PublicKey.from cannot be element referenced 1`] = `
"snippetCode.ts (3,30): Builtin properties cannot be referenced

      1 | 
      2 |       import { PublicKey } from '@neo-one/smart-contract';
    > 3 |       const keys = PublicKey['from'];
        |                              ^
      4 |     
"
`;

exports[`PublicKey.from cannot be referenced - object 1`] = `
"snippetCode.ts (3,15): Builtin properties cannot be referenced

      1 | 
      2 |       import { PublicKey } from '@neo-one/smart-contract';
    > 3 |       const { from } = PublicKey;
        |               ^
      4 |     
"
`;

exports[`PublicKey.from cannot be referenced 1`] = `
"snippetCode.ts (3,30): Builtin properties cannot be referenced

      1 | 
      2 |       import { PublicKey } from '@neo-one/smart-contract';
    > 3 |       const keys = PublicKey.from;
        |                              ^
      4 |     
"
`;
